--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-
+<link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
